syntax = "proto3";
package ftestats;

import "delphi.proto";

message FteCPSMetrics {
    // External
    option (delphi.datapath_metrics) = true;
    fixed64        Key                        = 1;     // FTE ID

    delphi.Counter connections_per_second     = 2;     // Connections per second
    delphi.Counter max_connections_per_second = 3;     // Max Connections per second
}

message FteLifQMetrics { 
    // Internal
    option (delphi.datapath_metrics) = true;
    fixed64        Key                        = 1;     // FTE ID

    delphi.Counter flow_miss_packets          = 2;     // Number of flow miss packets processed by this FTE
    delphi.Counter flow_retransmit_packets    = 3;     // Number of flow retransmits seen
    delphi.Counter l4_redirect_packets        = 4;     // Number of packets that hit the L4 redirect queue
    delphi.Counter alg_control_flow_packets   = 5;     // Number of packets that hit the ALG control flow queue
    delphi.Counter tcp_close_packets          = 6;     // Number of packets that hit the TCP close queue
    delphi.Counter tls_proxy_packets          = 7;     // Number of packets that hit the TLS Proxy queue
    delphi.Counter fte_span_packets           = 8;     // Number of packets that hit the FTE SPAN queue
    delphi.Counter software_queue_packets     = 9;     // Number of packets that hit the FTE config path
    delphi.Counter queued_tx_packets          = 10;    // Number of packets enqueue in the FTE TX queue
}

message SessionSummaryMetrics {
    option (delphi.datapath_metrics) = true;
    fixed64        Key                       = 1;  // Stats per FTE
   
    delphi.Counter total_active_sessions         = 2;  // Total Number of active sessions 
    delphi.Counter num_l2_sessions               = 3;  // Total Number of L2 Sessions
    delphi.Counter num_tcp_sessions              = 4;  // Total Number of TCP sessions
    delphi.Counter num_udp_sessions              = 5;  // Total Number of UDP sessions
    delphi.Counter num_icmp_sessions             = 6;  // Total Number of ICMP sessions
    delphi.Counter num_drop_sessions             = 7;  // Total Number of Drop sessions
    delphi.Counter num_aged_sessions             = 8;  // Total Number of Aged sessions
    delphi.Counter num_tcp_resets                = 9;  // Total Number of TCP Resets sent as a result of SFW Reject
    delphi.Counter num_icmp_errors               = 10;  // Total Number of ICMP Errors sent as a result of SFW Reject
    delphi.Counter num_tcp_cxnsetup_timeouts     = 11; // Total Number of sessions that timed out at connection setup
    delphi.Counter num_session_create_errors     = 12; // Total Number of sessions that errored out during creation    
}
